app/app-a/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-a-deployment
  namespace: test
  labels:
    app: app-a
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-a
  template:
    metadata:
      labels:
        app: app-a
    spec:
      containers:
      - name: app-a
        image: app-a:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-a-service
  namespace: test
  labels:
    app: test-app
spec:
  selector:
    app: app-a 
  ports:
    - name: http-port
      protocol: TCP
      port: 80
      targetPort: 80
