app/app-a/kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-a-ingress
  namespace: test
  annotations:
    konghq.com/strip-path: "true"    
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - host: kong.example.com
    http:
      paths:
      - path: /app-a
        pathType: Prefix
        backend:
          service:
            name: app-a-service
            port: 
              number: 80
